style.css
@font-face {
    font-family: HarmonyOS;
    src: url(fonts/harmonyos-sans/HarmonyOS_Sans_Black.ttf);
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

body {
    background-color: #2b2a2a;
}
.memo-icon {
    display: block;
    filter: brightness(0) invert(1);
    max-width: 100%;
    height: auto;
    justify-content: center;
}

.grid-button {
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
    border-radius: 11px;
}

.grid-button:focus {
    background-color: #b2a500;
}

.grid-button:not(:focus):hover {
    background-color: #696969;
}

.grid-button:is(:focus):hover {
    background-color: #d6c801;
}

.icons-grid {
    display: grid;
    grid-template-columns: repeat(5, minmax(0, 1fr));
    gap: 20px;
    height: auto;
}

.memo-text {
    text-align: center;
    transform: translateY(-15px);
}

.grid-card {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-direction: column;
}

p {
    color: white;
    font-family: HarmonyOS;
    font-size: 20px;
    word-wrap: break-word;
}

